@startuml Class Diagram

class "Context" as C {
    variables: Dictionary<string, int>
    
    Context()
    GetVariable(name string) int
    SetVariable(name string, value int)
}

class "IExpression" as I  {
    Interpret(context Context) int
}

class "NumberExpression" as N {
    name string
    
    NumberExpression(variableName string)
    Interpret(context Context) int
}

class "AddExpression" as Add {
    leftExpression IExpression
    rightExpression IExpression
    
    AddExpression(left IExpression, right IExpression)
    Interpret(context Context) int
}

class "SubtractExpression" as Sub {
    leftExpression IExpression
    rightExpression IExpression
    
    SubtractExpression(left IExpression, right IExpression)
    Interpret(context Context) int
}

class "Program" as P {
 
    Main(args[] string)
}


P -left-> C
P -> I
I -up-|> N
I -up-|> Add
I -up-|> Sub


@enduml